k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: civdle
  namespace: civdle
  labels:
    app: civdle
spec:
  selector:
    app: civdle
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      appProtocol: http
